<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:background="@drawable/bg1"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:text="@string/character_view_variable_launch_button_text"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_one"
            android:onClick="launchNextActivity"
            android:id="@+id/character_view_variable_launch_button"/>

        </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="3"
        android:gravity="center">

        <com.pattmayne.facefighter.CharacterSummaryView
            android:background="@null"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/characterSummaryView"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2"
        android:gravity="center">

        <TextView
            android:text="@string/character_name_text"
            android:textColor="@color/orange3"
            android:textSize="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/character_name_label"/>

        <TextView
            android:textColor="@color/orange2"
            android:textSize="15dp"
            android:text="@string/character_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/character_info_text_label"/>

    </LinearLayout>

</LinearLayout>